# RAG_based_research_assitant

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
artifacts/research_papers/biology/: content.md  links.json  metadata.json
scraped_markdown/: en_wikipedia_org_wiki_Attention_Is_All_You_Need.md
src/: agent.py  image_info.py  main.py  mas.py  model.py  pipeline.py  retriever.py  scrapper.py
src/artifacts/Vector_databases/biology/: chroma.sqlite3
src/research/: Image_info.ipynb  loader.ipynb  rag.ipynb  retriever.ipynb  scrapping.ipynb  scrapping.py  testing.ipynb
src/research/scraped_data_20250614_154612/: content.md
